@@ -1,107 +1,233 @@
 package com.marketdata.sdk;
 
-import java.io.IOException;
-import java.nio.file.Files;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.HashMap;
 import java.util.Map;
+import java.util.Set;
+import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.regex.Pattern;
 import org.jspecify.annotations.Nullable;
 
-/**
- * Resolves SDK configuration values per the cascade in SDK requirements §4: {@code explicit value →
- * MARKETDATA_* env var → .env file in CWD → built-in default}.
- *
- * <p>The single canonical construction path is {@link #loadFromProcess()}, which snapshots the live
- * environment and the {@code .env} file once. The constructor is strictly private — there is no
- * production-callable backdoor for injecting arbitrary maps. Tests reach the private constructor
- * via reflection (see {@code ConfigurationTest}); this is by design so a developer can't
- * accidentally take a shortcut around the canonical load path.
- */
-final class Configuration {
+record Configuration(
+    @Nullable String apiKey,
+    String baseUrl,
+    String apiVersion,
+    @Nullable String loggingLevel,
+    @Nullable String dateFormat) {
 
-  public static final String DEFAULT_BASE_URL = "https://api.marketdata.app";
-  public static final String DEFAULT_API_VERSION = "v1";
-  private static final Path DEFAULT_DOTENV_PATH = Paths.get(".env");
+  static final String DEFAULT_BASE_URL = "https://api.marketdata.app";
+  static final String DEFAULT_API_VERSION = "v1";
+  static final Path DEFAULT_DOTENV_PATH = Path.of(".env");
 
-  private final Map<String, String> systemEnv;
-  private final Map<String, String> dotEnv;
+  private static final Set<String> ALLOWED_SCHEMES = Set.of("http", "https");
+  private static final Pattern API_VERSION_PATTERN = Pattern.compile("[A-Za-z0-9._-]+");
 
-  private Configuration(Map<String, String> systemEnv, Map<String, String> dotEnv) {
-    this.systemEnv = Map.copyOf(systemEnv);
-    this.dotEnv = Map.copyOf(dotEnv);
+  /**
+   * Convenience overload that discards any {@link DotEnvLoader.Warning}s. Used by tests and any
+   * call site that does not need to replay them through a freshly-configured logger.
+   */
+  static Configuration resolve(
+      @Nullable String explicitApiKey,
+      @Nullable String explicitBaseUrl,
+      @Nullable String explicitApiVersion,
+      Function<String, @Nullable String> env,
+      Path dotEnvPath) {
+    return resolve(explicitApiKey, explicitBaseUrl, explicitApiVersion, env, dotEnvPath, w -> {});
+  }
+
+  static Configuration resolve(
+      @Nullable String explicitApiKey,
+      @Nullable String explicitBaseUrl,
+      @Nullable String explicitApiVersion,
+      Function<String, @Nullable String> env,
+      Path dotEnvPath,
+      Consumer<DotEnvLoader.Warning> warnings) {
+    Map<String, String> dotEnv = DotEnvLoader.load(dotEnvPath, warnings, EnvVars.ALLOWED_KEYS);
+    String apiKey = pickFirst(explicitApiKey, env.apply(EnvVars.TOKEN), dotEnv.get(EnvVars.TOKEN));
+    String baseUrl =
+        pickFirstOrDefault(
+            DEFAULT_BASE_URL,
+            explicitBaseUrl,
+            env.apply(EnvVars.BASE_URL),
+            dotEnv.get(EnvVars.BASE_URL));
+    String apiVersion =
+        pickFirstOrDefault(
+            DEFAULT_API_VERSION,
+            explicitApiVersion,
+            env.apply(EnvVars.API_VERSION),
+            dotEnv.get(EnvVars.API_VERSION));
+    String loggingLevel =
+        pickFirst(env.apply(EnvVars.LOGGING_LEVEL), dotEnv.get(EnvVars.LOGGING_LEVEL));
+    String dateFormat = pickFirst(env.apply(EnvVars.DATE_FORMAT), dotEnv.get(EnvVars.DATE_FORMAT));
+    String normalizedBaseUrl = normalizeBaseUrl(baseUrl);
+    String normalizedApiVersion = normalizeApiVersion(apiVersion);
+    validateBaseUrl(normalizedBaseUrl);
+    validateApiVersion(normalizedApiVersion);
+    validateApiKey(apiKey);
+    return new Configuration(
+        apiKey, normalizedBaseUrl, normalizedApiVersion, loggingLevel, dateFormat);
   }
 
   /**
-   * Production factory: snapshots {@code System.getenv()} and reads {@code ./.env} once. Call
-   * during client construction.
+   * Strip trailing slashes from {@code baseUrl} so {@code HttpTransport.buildUri} can append {@code
+   * "/" + apiVersion + "/" + path} unconditionally. A user-supplied {@code
+   * "https://api.marketdata.app/"} would otherwise produce a double-slash like {@code
+   * "https://api.marketdata.app//v1/..."} that some routers reject and others silently canonicalize
+   * — either way, an annoying source of "looks right but isn't" failures.
    */
-  public static Configuration loadFromProcess() {
-    return new Configuration(System.getenv(), readDotEnvFile(DEFAULT_DOTENV_PATH));
-  }
-
-  /** Cascade: explicit → system env → .env → {@code null}. */
-  public @Nullable String resolve(@Nullable String explicit, String envKey) {
-    if (isPresent(explicit)) {
-      return explicit;
+  static String normalizeBaseUrl(String raw) {
+    String trimmed = raw.trim();
+    int end = trimmed.length();
+    while (end > 0 && trimmed.charAt(end - 1) == '/') {
+      end--;
     }
-    String fromSystem = systemEnv.get(envKey);
-    if (isPresent(fromSystem)) {
-      return fromSystem;
-    }
-    String fromDotEnv = dotEnv.get(envKey);
-    return isPresent(fromDotEnv) ? fromDotEnv : null;
-  }
-
-  /** Same as {@link #resolve} but returns {@code defaultValue} when the cascade yields nothing. */
-  public String resolveOrDefault(@Nullable String explicit, String envKey, String defaultValue) {
-    String resolved = resolve(explicit, envKey);
-    return resolved != null ? resolved : defaultValue;
-  }
-
-  private static boolean isPresent(@Nullable String value) {
-    return value != null && !value.isBlank();
+    return trimmed.substring(0, end);
   }
 
   /**
-   * Reads a {@code .env}-style file: lines like {@code KEY=value}, {@code #} for comments,
-   * surrounding single or double quotes stripped. Package-private so tests can target an arbitrary
-   * {@link Path} (e.g. inside a JUnit {@code @TempDir}) instead of CWD.
+   * Strip leading and trailing slashes from {@code apiVersion} so the segment composes cleanly
+   * regardless of how the user spelled it ({@code "v1"}, {@code "/v1"}, {@code "v1/"}, {@code
+   * "/v1/"}).
    */
-  static Map<String, String> readDotEnvFile(Path path) {
-    if (!Files.isRegularFile(path)) {
-      return Map.of();
+  static String normalizeApiVersion(String raw) {
+    String trimmed = raw.trim();
+    int start = 0;
+    int end = trimmed.length();
+    while (start < end && trimmed.charAt(start) == '/') {
+      start++;
     }
-    Map<String, String> result = new HashMap<>();
+    while (end > start && trimmed.charAt(end - 1) == '/') {
+      end--;
+    }
+    return trimmed.substring(start, end);
+  }
+
+  /**
+   * Validate that {@code baseUrl} (already normalized — no trailing slashes, no surrounding
+   * whitespace) is a usable HTTP origin. The point is to fail at construction with a clear message
+   * instead of letting {@link java.net.http.HttpClient} surface a cryptic {@code
+   * IllegalArgumentException} the first time a request is sent.
+   *
+   * <p>Rules:
+   *
+   * <ul>
+   *   <li>Non-empty (post-normalize {@code "////"} collapses to empty).
+   *   <li>Parseable as a {@link URI}.
+   *   <li>Scheme is exactly {@code http} or {@code https} — schemes like {@code file:}, {@code
+   *       ftp:}, or {@code javascript:} have no business here.
+   *   <li>Host is present (rules out scheme-only inputs like {@code "https://"}).
+   *   <li>No query, fragment, or user-info — those belong on a request, not the origin, and their
+   *       presence is almost always a copy-paste mistake that would mangle the constructed URL.
+   * </ul>
+   */
+  static void validateBaseUrl(String baseUrl) {
+    if (baseUrl.isEmpty()) {
+      throw new IllegalArgumentException(
+          "baseUrl must not be empty; expected an http or https URL like " + DEFAULT_BASE_URL);
+    }
+    URI uri;
     try {
-      for (String raw : Files.readAllLines(path)) {
-        String line = raw.trim();
-        if (line.isEmpty() || line.startsWith("#")) {
-          continue;
-        }
-        int eq = line.indexOf('=');
-        if (eq < 1) {
-          continue;
-        }
-        String key = line.substring(0, eq).trim();
-        String value = stripQuotes(line.substring(eq + 1).trim());
-        result.put(key, value);
-      }
-    } catch (IOException ignored) {
-      return Map.of();
+      uri = new URI(baseUrl);
+    } catch (URISyntaxException e) {
+      throw new IllegalArgumentException(
+          "baseUrl '" + baseUrl + "' is not a valid URI: " + e.getMessage(), e);
     }
-    return Map.copyOf(result);
+    String scheme = uri.getScheme();
+    if (scheme == null || !ALLOWED_SCHEMES.contains(scheme.toLowerCase(java.util.Locale.ROOT))) {
+      throw new IllegalArgumentException(
+          "baseUrl '"
+              + baseUrl
+              + "' must use scheme http or https (got "
+              + (scheme == null ? "<none>" : scheme)
+              + ")");
+    }
+    if (uri.getHost() == null) {
+      throw new IllegalArgumentException(
+          "baseUrl '" + baseUrl + "' is missing a host (e.g. api.marketdata.app)");
+    }
+    if (uri.getRawQuery() != null) {
+      throw new IllegalArgumentException(
+          "baseUrl '" + baseUrl + "' must not contain a query string");
+    }
+    if (uri.getRawFragment() != null) {
+      throw new IllegalArgumentException("baseUrl '" + baseUrl + "' must not contain a fragment");
+    }
+    if (uri.getRawUserInfo() != null) {
+      throw new IllegalArgumentException(
+          "baseUrl '"
+              + baseUrl
+              + "' must not contain user-info — credentials belong on the"
+              + " request, not the origin");
+    }
   }
 
-  private static String stripQuotes(String value) {
-    if (value.length() < 2) {
-      return value;
+  /**
+   * Validate {@code apiVersion} (already normalized — no leading/trailing slashes, no surrounding
+   * whitespace) as a single, URL-safe path segment. Rejects anything outside {@code [A-Za-z0-9._-]}
+   * — that's permissive enough for {@code v1}, {@code v2}, {@code v1.0}, {@code beta-1}, etc.,
+   * while ruling out embedded slashes ({@code "v1/extra"}), spaces, already percent-encoded values
+   * ({@code "%2Fv1"}), and path-traversal tokens ({@code ".."} fails because {@code .} alone is
+   * allowed but the result becomes a literal {@code ".."} segment — that's still legitimate enough
+   * to send and the server will reject it; the regex's job is just to keep us from emitting
+   * malformed URLs).
+   */
+  /**
+   * Issue #23: reject API keys with characters that would later be rejected by {@link
+   * java.net.http.HttpRequest.Builder#header} ({@code IllegalArgumentException} on CR/LF) or carry
+   * the smell of a copy-paste mishap (embedded NUL, control chars, high-bit bytes). Failing here
+   * gives the caller a clear message at construct time; without the check, a token loaded from a
+   * {@code .env} with stray {@code \r\n} surfaces as a generic {@code IllegalArgumentException}
+   * from {@code HttpClient} on the very first request — far from the actual configuration source.
+   *
+   * <p>Rule: every character must be printable ASCII ({@code [0x20, 0x7E]}). That covers every
+   * legitimate token shape ({@code letters/digits/.-_+=/}) while ruling out CR/LF/NUL, DEL, and any
+   * accidentally pasted high-bit byte from a non-UTF-8 file. Demo mode (apiKey == null) is
+   * preserved untouched.
+   */
+  static void validateApiKey(@Nullable String apiKey) {
+    if (apiKey == null) {
+      return; // demo mode — no token to validate
     }
-    char first = value.charAt(0);
-    char last = value.charAt(value.length() - 1);
-    if ((first == '"' && last == '"') || (first == '\'' && last == '\'')) {
-      return value.substring(1, value.length() - 1);
+    for (int i = 0; i < apiKey.length(); i++) {
+      char c = apiKey.charAt(i);
+      if (c < 0x20 || c > 0x7E) {
+        throw new IllegalArgumentException(
+            "apiKey contains an invalid character at offset "
+                + i
+                + " (code point 0x"
+                + Integer.toHexString(c)
+                + "). Tokens must be printable ASCII; check for stray CR/LF or non-UTF-8 bytes in"
+                + " the source (env var, .env file, or constructor argument).");
+      }
     }
-    return value;
+  }
+
+  static void validateApiVersion(String apiVersion) {
+    if (apiVersion.isEmpty()) {
+      throw new IllegalArgumentException(
+          "apiVersion must not be empty; expected a path segment like " + DEFAULT_API_VERSION);
+    }
+    if (!API_VERSION_PATTERN.matcher(apiVersion).matches()) {
+      throw new IllegalArgumentException(
+          "apiVersion '"
+              + apiVersion
+              + "' must match [A-Za-z0-9._-]+ (a single URL-safe path segment)");
+    }
+  }
+
+  private static @Nullable String pickFirst(@Nullable String... candidates) {
+    for (String candidate : candidates) {
+      if (candidate != null && !candidate.isBlank()) {
+        return candidate;
+      }
+    }
+    return null;
+  }
+
+  private static String pickFirstOrDefault(String fallback, @Nullable String... candidates) {
+    String picked = pickFirst(candidates);
+    return picked != null ? picked : fallback;
   }
 }
